# quickshell-sidebar

./: README.md  shell.qml
scripts/: main.py  pyproject.toml
scripts/taskUtil/: .gitignore  Makefile  main.c
scripts/weatherUtil/: .cache.sqlite  main.py  pyproject.toml  weatherUtil.py
sidebarRight/: BottomGroup.qml  CenterGroup.qml  TopGroup.qml
