[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
    "openmeteo-requests>=1.7.5",
    "pandas>=3.0.2",
    "pyquery>=2.0.1",
    "requests>=2.33.0",
    "requests-cache>=1.3.1",
    "retry-requests>=2.0.0",
]
